--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
   <a href="https://youtube.com/@NaphtalyForce" target="_blank"> <i data-feather="youtube"></i></a>
 </div>
 
+<div>
 <a class="btn" href="mailto:naphtalyforce@gmail.com" target="_blank">Email me </a>
 
 <a class="btn" href="https://wa.me/27640745309" target="_blank">Whatsapp me</a>
+</div>
 
-
+<img src="qr-code.png" width="20%" height="20%"><br>
+<p>Scan the QR Code</p>
 
     <script>
       feather.replace()
