--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <h1>Naphtaly Force</h1>
 
-<p>Naphtaly Force is a South African YouTuber and musician known primarily for his role in Crystal Clear Music Duo . He creates prank videos on his own for his personal channel, and makes music on crystal clear music platforms. Naphtaly has recently transitioned into starting his own anti drug campaign which is performing great in the year 2023.
+<p>Naphtaly Force is a South African YouTuber and musician known primarily for his role in <i>Crystal Clear Music Duo.</i> He creates prank videos on his own for his personal channel, and makes music on crystal clear music platforms. Naphtaly has recently transitioned into starting his own anti drug campaign which is performing great in the year 2023.
 </p>
 
 
